# ioproject-backend

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  alembic.ini  example.db  heroku.yml  pyproject.toml  setup.cfg
app/: main.py
app/api/: api.py
app/api/endpoints/: hair_product.py  login.py  skin_product.py
app/core/: auth.py  config.py  db.py
app/models/: HairProduct.py  SkinProduct.py  Token.py
migrations/: env.py
migrations/versions/: 30232098f14f_init.py  6d31c5bcc898_init.py
tests/core/: test_security.py
